# cedar-server

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  build.rs  deny.toml  diesel.toml  docker-compose.yml
.github/: todo
migrations/2024-04-19-091622_create_policies/: down.sql  up.sql
migrations/2024-04-19-092851_create_entities/: up.sql
migrations/2024-04-19-092851_create_stores/: up.sql
proto/: Taskfile.yaml  buf.gen.yaml  buf.yaml
proto/management/v1/: management.proto  management_service.proto
proto/verification/v1/: verification.proto  verification_service.proto
src/: lib.rs
src/api/: management.rs  mod.rs
src/cedar/: mod.rs
src/storage/: database.rs  error.rs  mod.rs  model.rs  repository.rs  schema.rs
tests/: api_tests.rs  storage_tests.rs
tests/common/: context.rs
tests/fixtures/2024-04-19-092851_create_stores/: up.sql
