[package]
name = "cedar-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/crashdump/cedar-server"
repository = "https://github.com/crashdump/cedar-server"
description = "Cedar-Server is a Cedar policy and data store."
build = "build.rs"

[[bin]]
name = "cedar_server"
path = "src/bin/main.rs"

[lib]
name = "cedar_server_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
cedar-policy = "3.1"
cedar-policy-core = "3.1"
diesel = { version = "2.1", features = ["postgres", "sqlite", "r2d2", "uuid"] }
diesel_migrations = "2.1"
dotenvy = "0.15"
env_logger = "0.11"
extend = "1.2"
futures = "0.3"
num_cpus = "1.16"
parking_lot = "0.12"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros"] }
tonic = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.8", features = ["v7", "fast-rng"] }

[build-dependencies]
tonic-buf-build = "0.2"
tonic-build = "0.11"

[features]
default = ["db_postgres"]
db_postgres = []
db_sqlite = []